--- a/flux-system/kustomization.yaml
+++ b/flux-system/kustomization.yaml
@@ -1,6 +1,8 @@
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 resources:
-- namespace.yaml
-- gotk-components.yaml
-- gotk-sync.yaml
+  - namespace.yaml
+  - gotk-components.yaml
+  - gotk-sync.yaml
+  - podinfo-kustomization.yaml
+  - podinfo-source.yaml
