Is the implicit verb of wildcards not working?

--- a/flux-system/gotk-components.yaml
+++ b/flux-system/gotk-components.yaml
@@ -106,31 +106,61 @@ rules:
   resources:
   - '*'
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - kustomize.toolkit.fluxcd.io
   resources:
   - '*'
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - helm.toolkit.fluxcd.io
   resources:
   - '*'
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - notification.toolkit.fluxcd.io
   resources:
   - '*'
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - image.toolkit.fluxcd.io
   resources:
   - '*'
   verbs:
-  - '*'
+  - get
+  - list
+  - watch
+  - create
+  - update
+  - patch
+  - delete
 - apiGroups:
   - ""
   resources:
