--- a/base/helm-repositories.yaml
+++ b/base/helm-repositories.yaml
@@ -6,3 +6,11 @@ metadata:
   namespace: base
 spec:
   url: https://prometheus-community.github.io/helm-charts
+---
+apiVersion: source.toolkit.fluxcd.io/v1
+kind: HelmRepository
+metadata:
+  name: ingress-nginx
+  namespace: base
+spec:
+  url: https://kubernetes.github.io/ingress-nginx
